crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__message_with_special_chars.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Here's some XML content:\n<task>\n    <id>123</id>\n    <description>Test <special> characters</description>\n    <data key=\"value\">\n        <item>1</item>\n        <item>2</item>\n    </data>\n</task>"
}
