crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__tool_message_conversion.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<tool_result><tool_name>test_tool</tool_name><success><![CDATA[{\n               \"user\": \"John\",\n               \"age\": 30,\n               \"address\": [{\"city\": \"New York\"}, {\"city\": \"San Francisco\"}]\n            }]]></success></tool_result>",
  "name": "test_tool",
  "tool_call_id": "123"
}
