crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__tool_message_typescript_code.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "tool",
  "content": "<tool_result><tool_name>rust_tool</tool_name><success><![CDATA[{ \"code\": \"fn main<T>(gt: T) {let b = &gt; }\"}]]></success></tool_result>",
  "name": "rust_tool",
  "tool_call_id": "456"
}
