crates/forge_open_router/src/open_router/snapshots/forge_open_router__open_router__request__tests__user_message_conversion.snap
---
source: crates/forge_open_router/src/open_router/request.rs
expression: router_message
---
{
  "role": "user",
  "content": "Hello"
}
